<resources>
    <string name="app_name">CST438_project1</string>
    <string name="mainMenu">Main Menu</string>
    <string name="viewCourses">View Courses</string>
    <string name="viewAccount">View Account</string>
    <string name="viewAssignments">View Assignments</string>
    <string name="viewGrades">View Grades</string>
    <string name="logout">Logout</string>
    <string name="createAccount">Create Account</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="userId">User ID</string>
    <string name="usernameError">Username is taken</string>
    <string name="password">Password</string>
    <string name="name">Name</string>

    <string name="aboveIsEmpty">One of the above fields is empty</string>
    <string name="logError">Wrong username or password</string>
    <string name="error">ERROR</string>

    <string name="addCourse">Add Course</string>
    <string name="courseName">Course Name</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="description">Description</string>
    <string name="size">Max Size</string>
</resources>
