<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuAtivities.AccountActivity">

    <TextView
        android:id="@+id/accountHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/viewAccount"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/accountHeader"
        app:layout_constraintTop_toBottomOf="@+id/accountHeader" />


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        app:layout_constraintStart_toStartOf="@+id/tvUn"
        app:layout_constraintTop_toTopOf="@+id/passwordView" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/tvUn"
        app:layout_constraintTop_toTopOf="@+id/nameView" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userId"
        app:layout_constraintStart_toStartOf="@+id/tvUn"
        app:layout_constraintTop_toTopOf="@+id/userIdView" />

    <EditText
        android:id="@+id/usernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="TextView"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/tvUn"
        app:layout_constraintTop_toTopOf="@+id/tvUn" />

    <EditText
        android:id="@+id/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/usernameView"
        app:layout_constraintTop_toBottomOf="@+id/usernameView" />

    <EditText
        android:id="@+id/nameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/usernameView"
        app:layout_constraintTop_toBottomOf="@+id/passwordView" />

    <TextView
        android:id="@+id/userIdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/nameView"
        app:layout_constraintTop_toBottomOf="@+id/nameView" />

    <Button
        android:id="@+id/editAccount"
        android:text="edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountHeader"
        app:layout_constraintVertical_bias="0.504" />
</androidx.constraintlayout.widget.ConstraintLayout>